Fix: constraints selector dropdown appears behind lower tiles

--- a/common/src/main/webapp/less/style.less
+++ b/common/src/main/webapp/less/style.less
@@ -951,6 +951,11 @@ tfoot {
   display: inline-block;
 }
 
+// observation tab edit panel
+.observation-tiles .constraints-tile {
+  z-index: 1;
+}
+
 .wip .wip-warning {
   visibility: hidden;
   width: 120px;
